namespace Bespoke.Agent.Cognition
{
    public class AgentOpinionSystem
    {
        private Opinions _opinions;
        private Relationships _relationships;

        // Methods to manage opinions and relationships
    }

    internal class Relationships
    {
    }

    internal class Opinions
    {
    }
}
