
using Bespoke.Agent.Cores;

namespace Bespoke.Agent.Cognition
{
    public class AgentPersonalitySystem : IAgentSystem
    {
        // Attributes and methods to manage personality traits and preferences
        public void Initialize()
        {
            //throw new System.NotImplementedException();
        }

        public void Initialize(AgentCore agent)
        {
            //throw new System.NotImplementedException();
        }

        public void Update()
        {
            //throw new System.NotImplementedException();
        }
    }
}
