namespace Bespoke.Agent.Cognition.KnowledgeGraph
{
    public class Edge {
        public Node Source;
        public Node Target;
        public string Relationship;
    }
}
