using System.Collections.Generic;

namespace Bespoke.Agent.Cognition.KnowledgeGraph
{
    public class KnowledgeGraph {
        public List<Node> Nodes;
        public List<Edge> Edges;

        public void AddNode(Node node) { /* ... */ }
        public void AddEdge(Edge edge) { /* ... */ }
    }
}
