public class Node {
    public string Name;
}
